[gd_scene load_steps=3 format=3 uid="uid://dinfbhfayqfn2"]

[ext_resource type="Script" path="res://examples/scenes/main_menu.gd" id="1"]
[ext_resource type="FontFile" path="res://examples/fonts/default_font.tres" id="2"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Playgama Bridge Examples"

[node name="HBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="PlatformButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Platform"

[node name="DeviceButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Device"

[node name="PlayerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Player"

[node name="GameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Game"

[node name="StorageButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Storage"

[node name="AdvertisementButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Advertisement"

[node name="SocialButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Social"

[node name="LeaderboardButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Leaderboard"

[node name="PaymentsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Payments"

[node name="RemoteConfig" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Remote Config"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlatformButton" to="." method="_on_platform_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeviceButton" to="." method="_on_device_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayerButton" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StorageButton" to="." method="_on_storage_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/AdvertisementButton" to="." method="_on_advertisement_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SocialButton" to="." method="_on_social_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PaymentsButton" to="." method="_on_payments_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RemoteConfig" to="." method="_on_remote_config_button_pressed"]
